<resources>
    <string name="Absolute">Absolute</string>
    <string name="Accept">Accept</string>
    <string name="AccessRestrictedTryAgainLater">Access is currently restricted. Please try again later.</string>
    <string name="Actor">Actor</string>
    <string name="ActorAsRole">as {0}</string>
    <string name="Add">Add</string>
    <string name="AddToCollection">Add to collection</string>
    <string name="AddToPlaylist">Add to playlist</string>
    <string name="AddedOnValue">Added {0}</string>
    <string name="Admin">Admin</string>
    <string name="Advanced">Advanced</string>
    <string name="AirDate">Air date</string>
    <string name="Aired">Aired</string>
    <string name="Album">Album</string>
    <string name="AlbumArtist">Album artist</string>
    <string name="Albums">Albums</string>
    <string name="All">All</string>
    <string name="AllChannels">All channels</string>
    <string name="AllComplexFormats">All complex formats (ASS, SSA, VOBSUB, PGS, SUB/IDX, etc.)</string>
    <string name="AllEpisodes">All episodes</string>
    <string name="AllLanguages">All languages</string>
    <string name="AllowSeasonalThemes">Allow automatic seasonal themes</string>
    <string name="AllowSeasonalThemesHelp">If enabled, seasonal themes will occasionally override your theme setting.</string>
    <string name="AlwaysPlaySubtitles">Always play subtitles</string>
    <string name="AlwaysPlaySubtitlesHelp">Subtitles matching the language preference will be loaded regardless of the audio language.</string>
    <string name="AnamorphicVideoNotSupported">Anamorphic video not supported</string>
    <string name="AndroidUnlockRestoreHelp">"To restore your previous purchase, please ensure you're signed into the device with the same Google (or Amazon) account that originally made the purchase. Make sure the app store is enabled and not restricted by any parental controls, and ensure you have an active internet connection. You'll only have to do this once to restore your previous purchase."</string>
    <string name="Any">Any</string>
    <string name="AnyLanguage">Any language</string>
    <string name="Anytime">Anytime</string>
    <string name="AreYouStillWatching">Are you still watching?</string>
    <string name="AreYouSureToContinue">Are you sure you wish to continue?</string>
    <string name="AroundTime">Around {0}</string>
    <string name="Art">Art</string>
    <string name="Artist">Artist</string>
    <string name="Artists">Artists</string>
    <string name="AsManyAsPossible">As many as possible</string>
    <string name="Ascending">Ascending</string>
    <string name="AspectRatio">Aspect ratio</string>
    <string name="AttemptingWakeServer">Attempting to wake server. Please wait...</string>
    <string name="AttributeNew">New</string>
    <string name="AudioBitDepthNotSupported">Audio bit depth not supported</string>
    <string name="AudioBitrateNotSupported">Audio bitrate not supported</string>
    <string name="AudioBooks">Audio books</string>
    <string name="AudioChannelsNotSupported">Audio channels not supported</string>
    <string name="AudioCodecNotSupported">Audio codec not supported</string>
    <string name="Favorite">Favorite</string>
    <string name="Filters">Filters</string>
    <string name="HeaderEditSubtitles">Edit Subtitles</string>
    <string name="LabelPlaystate">Playstate:</string>
    <string name="Played">Played</string>
    <string name="Unplayed">Unplayed</string>
    <string name="btn_clear_all">Clear All</string>
    <string name="btn_del">Del</string>
    <string name="btn_ok">OK</string>
    <string name="desc_burn_ssa">Only enable if you must have the internal formatting of these subs. WILL CAUSE TRANSCODING</string>
    <string name="desc_debug">Turn on to provide extra information for debugging</string>
    <string name="desc_favor_logo">Show logo if available on item detail screens to allow more backdrop to show through. If disabled, the poster will be shown.</string>
    <string name="desc_info_panel">Show a panel with details on the current item on the home screen</string>
    <string name="desc_live_copy">Disable to force transcoding of live video streams. Only do this if you have trouble playing live streams.</string>
    <string name="desc_premieres">Show a row of new episode 1s for the shows you watch</string>
    <string name="desc_seasonal_themes">Allow special colors and suggestions at certain times of the year</string>
    <string name="lbl_3d">3D</string>
    <string name="lbl_add_favorite">Add Favorite</string>
    <string name="lbl_add_to_queue">Add to Queue</string>
    <string name="lbl_audio_output">Audio Output</string>
    <string name="lbl_burn_ssa">Burn in SSA Subs for Formatting</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_color_coded_backgrounds">Enable Color Coded Backgrounds</string>
    <string name="lbl_compact_layout">Use Compact Layout</string>
    <string name="lbl_deinterlace_hd">DeInterlace HD Content</string>
    <string name="lbl_deinterlace_hd_summary">Transcode high definition interlaced content on the server to remove interlacing</string>
    <string name="lbl_deinterlace_sd">DeInterlace SD Content</string>
    <string name="lbl_deinterlace_sd_summary">Transcode standard definition interlaced content on the server to remove interlacing</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_direct_path_summary">Pass the file system path instead of streaming url</string>
    <string name="lbl_direct_play_live">Direct Play Live TV</string>
    <string name="lbl_direct_stream_copy">Allow Video Stream Copy</string>
    <string name="lbl_enable_cinema_mode">Enable Cinema Intros</string>
    <string name="lbl_enable_debug">Enable debug options</string>
    <string name="lbl_enable_seasonal_themes">Enable Seasonal Themes</string>
    <string name="lbl_enable_theme_songs">Enable Theme Songs</string>
    <string name="lbl_enhanced_home_screen">Enhanced Home Screen</string>
    <string name="lbl_external_player_summary">Requires a capable app to play live streams</string>
    <string name="lbl_favor_logo">Favor Logo on Detail Screen</string>
    <string name="lbl_favorites_at_beginning">Place favorites at beginning</string>
    <string name="lbl_focusrect_color">Focus Rectangle Color</string>
    <string name="lbl_got_it">Got It</string>
    <string name="lbl_goto_series">Go to Show</string>
    <string name="lbl_hd">HD</string>
    <string name="lbl_hd_programs">HD Programs</string>
    <string name="lbl_home_screen_welcome_text">"Your home screen rows now match your other apps by following the global user settings on the server.

You can adjust these settings from the Home Screen Layout options in this app or many of the others.

These settings will carry across apps for each user."</string>
    <string name="lbl_home_screen_welcome_title">Welcome to your new Home Screen</string>
    <string name="lbl_live_broadcasts">Live Broadcasts</string>
    <string name="lbl_new_episodes">New Episodes</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_parental_rating">Parental Rating</string>
    <string name="lbl_pass_direct_path">Pass Direct Path</string>
    <string name="lbl_pref_allow_direct_ts">Allow Direct Play of TS Files</string>
    <string name="lbl_pref_allow_direct_ts_summary">Some TS/MpegTS files cannot be seeked unless remuxed. Disable this if these items will not seek properly</string>
    <string name="lbl_pref_allow_dts">Allow DTS Pass-thru</string>
    <string name="lbl_pref_allow_dts_hd">Enable DTS-HD Pass-thru</string>
    <string name="lbl_pref_allow_dts_hd_summary">"Turn off if your equipment doesn't support DTS-HD MA"</string>
    <string name="lbl_pref_allow_dts_summary">"Turn off if your equipment doesn't support DTS"</string>
    <string name="lbl_pref_buffer_size">Player Buffer Size</string>
    <string name="lbl_pref_live_cc">Expose Closed Captions in live and recorded TV</string>
    <string name="lbl_pref_live_mpv">Prefer MPV for Live TV Playback</string>
    <string name="lbl_pref_live_start_time">Live TV Start Time</string>
    <string name="lbl_pref_rec_mpv">Prefer MPV for recordings</string>
    <string name="lbl_pref_up_next">Show Up Next Preview</string>
    <string name="lbl_premieres">Premieres</string>
    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_refresh_switching">Enable Refresh Rate Switching</string>
    <string name="lbl_remove_favorite">Remove Favorite</string>
    <string name="lbl_repeat_episodes">Repeat Episodes</string>
    <string name="lbl_resolution">Resolution:</string>
    <string name="lbl_resolution_switching">Match Video Resolution</string>
    <string name="lbl_resume_rewind">Resume Rewind</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_sd">SD</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_show_backdrop">Show Backdrop while Browsing</string>
    <string name="lbl_show_focusrect">Show a Highlight Rectangle on the Current Item</string>
    <string name="lbl_show_indicators">Show Indicators For</string>
    <string name="lbl_show_premieres">Show Season Premieres on Home Screen</string>
    <string name="lbl_skip_back_amount">Skip Back Length</string>
    <string name="lbl_skip_forward_amount">Skip Forward Length</string>
    <string name="lbl_sort_by">Sort by</string>
    <string name="lbl_tv_queuing">Play Next Episode Automatically</string>
    <string name="lbl_use_cards">Use Card Style</string>
    <string name="lbl_use_external_player_live">Use External Player for Live TV</string>
    <string name="lbl_use_external_player_videos">Use External Player for Videos</string>
    <string name="lbl_use_external_player_videos_summary">Requires an external player capable of playing videos be installed</string>
    <string name="number_eight">8</string>
    <string name="number_five">5</string>
    <string name="number_four">4</string>
    <string name="number_nine">9</string>
    <string name="number_one">1</string>
    <string name="number_seven">7</string>
    <string name="number_six">6</string>
    <string name="number_three">3</string>
    <string name="number_two">2</string>
    <string name="number_zero">0</string>
    <string name="pref_alt_pw_entry">Use custom d-pad password entry technique</string>
    <string name="pref_alt_pw_entry_desc">Enables numeric password entry with only d-pad keys without exposing the password to everyone in the room</string>
    <string name="pref_auto_logoff_title">Auto Logoff Timeout</string>
    <string name="pref_display_theme_title">Display Theme</string>
    <string name="pref_live_tv_mode">Live TV Mode</string>
    <string name="pref_live_tv_mode_desc">Go directly to last played live TV channel</string>
    <string name="pref_login_behavior_title">Start Up Behavior</string>
    <string name="pref_max_bitrate_title">Max Streaming Bitrate</string>
    <string name="pref_preplay_options">Show Pre-Playback Media Selections</string>
    <string name="pref_prompt_pw">Prompt For Password</string>
    <string name="pref_runaway_prevention">Enable \"Still Watching?\" prompt</string>
    <string name="pref_theme_default">Dark (default)</string>
    <string name="sum_enable_cinema_mode">If current on the server, enable intros and previews before movie playback</string>
    <string name="sum_preplay_options">Show controls to allow selection of audio and subs before playback</string>
    <string name="sum_runaway_prevention">Prevent playback from continuing indefinitely by prompting for user input</string>
    <string name="sum_show_up_next">Show information for the next item near the end of the current one</string>
    <string name="sum_tv_queuing">Add the rest of the season to the playback queue when playing an episode</string>
    <string name="sum_use_cards">Display items on a material colored \"card\"</string>
</resources>