<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dark_gradient" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:enabled="false" android:textSize="42.0sp" android:gravity="center" android:id="@id/number_entry" android:background="@drawable/emby_button" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:minHeight="48.0dip" android:maxLines="1" />
    <TableLayout android:orientation="vertical" android:id="@id/keyboard" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/keyboard_divider" android:showDividers="beginning|end|middle">
        <TableRow style="@style/keyboard_row">
            <Button android:id="@id/t9_key_1" android:background="@drawable/emby_button" android:text="@string/number_one" style="@style/keyboard_number_button" />
            <Button android:id="@id/t9_key_2" android:background="@drawable/emby_button" android:text="@string/number_two" style="@style/keyboard_number_button" />
            <Button android:id="@id/t9_key_3" android:background="@drawable/emby_button" android:text="@string/number_three" style="@style/keyboard_number_button" />
        </TableRow>
        <TableRow style="@style/keyboard_row">
            <Button android:id="@id/t9_key_4" android:background="@drawable/emby_button" android:text="@string/number_four" style="@style/keyboard_number_button" />
            <Button android:id="@id/t9_key_5" android:background="@drawable/emby_button" android:text="@string/number_five" style="@style/keyboard_number_button" />
            <Button android:id="@id/t9_key_6" android:background="@drawable/emby_button" android:text="@string/number_six" style="@style/keyboard_number_button" />
        </TableRow>
        <TableRow style="@style/keyboard_row">
            <Button android:id="@id/t9_key_7" android:background="@drawable/emby_button" android:text="@string/number_seven" style="@style/keyboard_number_button" />
            <Button android:id="@id/t9_key_8" android:background="@drawable/emby_button" android:text="@string/number_eight" style="@style/keyboard_number_button" />
            <Button android:id="@id/t9_key_9" android:background="@drawable/emby_button" android:text="@string/number_nine" style="@style/keyboard_number_button" />
        </TableRow>
        <TableRow style="@style/keyboard_row">
            <Button android:textAppearance="?android:textAppearanceMedium" android:id="@id/t9_key_dot" android:background="@drawable/emby_button" android:text="." style="@style/keyboard_number_button" />
            <Button android:id="@id/t9_key_0" android:background="@drawable/emby_button" android:text="@string/number_zero" style="@style/keyboard_number_button" />
            <Button android:textAppearance="?android:textAppearanceMedium" android:id="@id/t9_key_backspace" android:background="@drawable/emby_button" android:text="@string/btn_del" style="@style/keyboard_button" />
        </TableRow>
        <TableRow style="@style/keyboard_row">
            <Button android:textColor="@android:color/white" android:id="@id/okButton" android:background="@drawable/emby_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="100.0dip" android:text="@string/btn_ok" style="@style/keyboard_button" />
        </TableRow>
    </TableLayout>
</LinearLayout>