<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/dark_gradient" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="30.0sp" android:textColor="@android:color/holo_blue_light" android:id="@id/textView13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="5.0dip" android:text="@string/lbl_settings" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0sp" android:layout_marginBottom="10.0sp" android:divider="@drawable/blank10x10" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:showDividers="middle">
        <Button android:textColor="@android:color/white" android:id="@id/okButton" android:background="@drawable/emby_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="100.0dip" android:text="@string/lbl_save" />
        <Button android:textColor="@android:color/white" android:id="@id/cancelButton" android:background="@drawable/emby_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="100.0dip" android:text="@string/lbl_cancel" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="@android:color/holo_blue_light" android:id="@id/sortLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_sort_by" android:layout_below="@id/textView13" android:layout_marginStart="20.0dip" />
    <Spinner android:id="@id/sortBy" android:background="@drawable/emby_button" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_below="@id/sortLabel" android:spinnerMode="dialog" android:layout_marginStart="10.0dip" android:layout_alignStart="@id/sortLabel" />
    <CheckBox android:id="@id/favTop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0sp" android:text="@string/lbl_favorites_at_beginning" android:layout_below="@id/sortBy" android:layout_alignStart="@id/sortLabel" />
    <CheckBox android:id="@id/colorCode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_color_coded_backgrounds" android:layout_below="@id/favTop" android:layout_alignStart="@id/sortLabel" />
    <CheckBox android:id="@id/compactLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_compact_layout" android:layout_below="@id/colorCode" android:layout_alignStart="@id/sortLabel" />
    <TextView android:textSize="16.0sp" android:textColor="@android:color/holo_blue_light" android:id="@id/indicatorLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/lbl_show_indicators" android:layout_below="@id/compactLayout" android:layout_alignStart="@id/sortLabel" />
    <CheckBox android:id="@id/hd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_hd_programs" android:layout_below="@id/indicatorLabel" android:layout_marginStart="10.0dip" android:layout_alignStart="@id/sortLabel" />
    <CheckBox android:id="@id/live" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_live_broadcasts" android:layout_below="@id/hd" android:layout_marginStart="10.0dip" android:layout_alignStart="@id/sortLabel" />
    <CheckBox android:id="@id/newEpisodes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_new_episodes" android:layout_below="@id/live" android:layout_marginStart="10.0dip" android:layout_alignStart="@id/sortLabel" />
    <CheckBox android:id="@id/premieres" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_premieres" android:layout_below="@id/newEpisodes" android:layout_marginStart="10.0dip" android:layout_alignStart="@id/sortLabel" />
    <CheckBox android:id="@id/repeat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_repeat_episodes" android:layout_below="@id/premieres" android:layout_marginStart="10.0dip" android:layout_alignStart="@id/sortLabel" />
    <CheckBox android:id="@id/rating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_parental_rating" android:layout_below="@id/repeat" android:layout_marginStart="10.0dip" android:layout_alignStart="@id/sortLabel" />
</RelativeLayout>