<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:layout_gravity="center_horizontal" android:id="@id/mainTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/Filters" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="30.0dip">
        <CheckBox android:id="@id/cbxFavorite" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/Favorite" />
        <RadioGroup android:orientation="horizontal" android:id="@id/rbPlaystate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/LabelPlaystate" />
            <RadioButton android:id="@id/rbPlaystateAny" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/Any" />
            <RadioButton android:id="@id/rbPlaystateUnwatched" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Unplayed" />
            <RadioButton android:id="@id/rbPlaystateWatched" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Played" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/videoFormatOptions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="30.0dip">
        <CheckBox android:id="@id/cbx3d" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/lbl_3d" />
        <RadioGroup android:orientation="horizontal" android:id="@id/rbResolution" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/lbl_resolution" />
            <RadioButton android:id="@id/rbResolutionAny" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/Any" />
            <RadioButton android:id="@id/rbResolution4k" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="4K" />
            <RadioButton android:id="@id/rbResolutionHd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_hd" />
            <RadioButton android:id="@id/rbResolutionSd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_sd" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/otherTitleArea" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="30.0dip">
        <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_other" />
        <Button android:textSize="12.0sp" android:id="@id/btnClearAll" android:background="@drawable/emby_button" android:layout_width="wrap_content" android:layout_height="22.0dip" android:layout_marginLeft="10.0dip" android:text="@string/btn_clear_all" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="15.0dip" android:layout_marginBottom="30.0dip" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:id="@id/otherFilters" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </ScrollView>
</LinearLayout>