<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/right_fade" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="32.0dip" android:layout_gravity="center|right|top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:layout_marginRight="120.0dip" android:text="@string/lbl_home_screen_welcome_title" />
    <TextView android:textSize="21.0dip" android:layout_gravity="center|right|top" android:layout_width="500.0dip" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_marginRight="100.0dip" android:text="@string/lbl_home_screen_welcome_text" />
    <Button android:layout_gravity="center|right|top" android:id="@id/okButton" android:background="@drawable/emby_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_marginRight="100.0dip" android:text="@string/lbl_got_it" />
</LinearLayout>